--- a/src/timerButtons.css
+++ b/src/timerButtons.css
@@ -1,147 +1,154 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background: #27272c;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  @font-face{
-    font-family: 'Space';
-    src: url('./fonts/SpaceMono-Bold.ttf') format('opentype');
-  }
-  
-  .timer-button {
-    position: relative;
-    background: #444;
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-    border: none;
-    letter-spacing: 0.1rem;
-    font-family: 'Space', monospace;
-    font-size: 1rem;
-    padding: 1rem 3rem;
-    transition: 0.2s;
-  }
-  
-  button:hover {
-    letter-spacing: 0.2rem;
-    padding: 1.1rem 3.1rem;
-    background: var(--clr);
-    color: #ffffff;
-    box-shadow: 0 0 35px var(--clr);
-    animation: box 3s infinite;
-  }  
-  
-  button::before {
-    content: "";
-    position: absolute;
-    inset: 2px;
-    background: #272822;
-  }
-  
-  button span {
-    position: relative;
-    z-index: 1;
-    transition: transform 0.3s ease-in-out;
-  }
+body {
+  background-image: url('./images/background.gif');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-color: #27272c;
+}
 
-  button .animation {
-    position: absolute;
-    inset: 0;
-    display: block;
-  }
-  
-  button .animation::before {
-    content: "";
-    position: absolute;
-    width: 10px;
-    height: 2px;
-    left: 80%;
-    top: -2px;
-    border: 2px solid var(--clr);
-    background: #272822;
-    transition: 1.4s;
-  }
-  
-  button:hover .animation::before {
-    width: 15px;
-    left: 20%;
-    animation: move 3s infinite;
-  }
-  
-  
-  button .animation::after {
-    content: "";
-    position: absolute;
-    width: 10px;
-    height: 2px;
-    left: 20%;
-    bottom: -2px;
-    border: 2px solid var(--clr);
-    background: #272822;
-    transition: 1.4s;
-  }
-  
-  button:hover .animation::after {
-    width: 15px;
-    left: 80%;
-    animation: move 3s infinite;
-  }
+@font-face{
+  font-family: 'PublicPixel';
+  src: url('./fonts/PublicPixel.ttf') format('opentype');
+}
 
-  .play-pause-container {
-    position: absolute;
-    bottom: 10%;
-    left: 50%;
-    transform: translateX(-50%);
-  }
+.timer-button {
+  position: relative;
+  background: #444;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  border: none;
+  letter-spacing: 0.1rem;
+  font-family: 'PublicPixel';
+  font-size: 1rem;
+  padding: 1rem 3rem;
+  transition: 0.2s;
+}
 
-  button span.show {
-    opacity: 1;
-    visibility: visible;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-  }
-  
-  button span.hide {
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-  }
+.timer-button:hover {
+  letter-spacing: 0.2rem;
+  padding: 1.1rem 3.1rem;
+  background: var(--clr);
+  color: #ffffff;
+  box-shadow: 0 0 35px var(--clr);
+  animation: box 3s infinite;
+}  
 
-  button:active span {
-    transform: translateY(1px);
+.timer-button:before {
+  content: "";
+  position: absolute;
+  inset: 2px;
+  background: #272822;
+}
+
+.timer-button span {
+  position: relative;
+  z-index: 1;
+  transition: transform 0.3s ease-in-out;
+}
+
+.timer-button .animation {
+  position: absolute;
+  inset: 0;
+  display: block;
+}
+
+.timer-button .animation::before {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 2px;
+  left: 80%;
+  top: -2px;
+  border: 2px solid var(--clr);
+  background: #272822;
+  transition: 1.4s;
+}
+
+.timer-button:hover .animation::before {
+  width: 15px;
+  left: 20%;
+  animation: move 3s infinite;
+}
+
+
+.timer-button .animation::after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 2px;
+  left: 20%;
+  bottom: -2px;
+  border: 2px solid var(--clr);
+  background: #272822;
+  transition: 1.4s;
+}
+
+.timer-button:hover .animation::after {
+  width: 15px;
+  left: 80%;
+  animation: move 3s infinite;
+}
+
+.play-pause-container {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.timer-button span.show {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.timer-button span.hide {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.timer-button:active span {
+  transform: translateY(1px);
+}
+
+@keyframes move {
+  0% {
+    transform: translateX(0);
   }
-  
-  @keyframes move {
-    0% {
-      transform: translateX(0);
-    }
-    50% {
-      transform: translateX(5px);
-    }
-    100% {
-      transform: translateX(0);
-    }
+  50% {
+    transform: translateX(5px);
   }
-  
-  @keyframes box {
-    0% {
-      box-shadow: #27272c;
-    }
-    50% {
-      box-shadow: 0 0 25px var(--clr);
-    }
-    100% {
-      box-shadow: #27272c;
-    }
+  100% {
+    transform: translateX(0);
   }
+}
+
+@keyframes box {
+  0% {
+    box-shadow: #27272c;
+  }
+  50% {
+    box-shadow: 0 0 25px var(--clr);
+  }
+  100% {
+    box-shadow: #27272c;
+  }
+}
+
+
   
