--- a/src/settings.css
+++ b/src/settings.css
@@ -20,3 +20,84 @@ background-repeat: no-repeat;
 background-size: contain;
 background-position: center;
 }
+
+.settings-panel {
+position: relative;
+display: inline-block;
+}
+
+.settings-button {
+background-color: #ccc;
+border: none;
+border-radius: 5px;
+color: #fff;
+cursor: pointer;
+padding: 10px;
+}
+
+.settings-modal {
+background-color: #fff;
+border-radius: 10px;
+box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+display: none;
+padding: 20px;
+position: absolute;
+top: -390px;
+left: 777px;
+width: 300px;
+height: 150px;
+z-index: 1;
+}
+
+.settings-modal:before {
+content: "";
+display: block;
+position: absolute;
+border-bottom: 10px solid #fff;
+border-left: 10px solid transparent;
+border-right: 10px solid transparent;
+top: -7px;
+right: 10px;
+}
+
+.settings-modal:after {
+content: "";
+display: block;
+position: absolute;
+top: -11px;
+right: 20px;
+}
+
+.settings-modal.show {
+display: block;
+animation: blockyAppear 2s forwards;
+}
+
+
+@keyframes blockyAppear {
+    0% {
+      width: 0;
+      height: 0;
+      background-size: 0% 0%;
+    }
+    25% {
+      width: 75px;
+      height: 37.5px;
+      background-size: 25% 25%;
+    }
+    50% {
+      width: 150px;
+      height: 75px;
+      background-size: 50% 50%;
+    }
+    75% {
+      width: 225px;
+      height: 112.5px;
+      background-size: 75% 75%;
+    }
+    100% {
+      width: 300px;
+      height: 150px;
+      background-size: 100% 100%;
+    }
+  }
