--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,23 @@
   }
 }
 
+p {
+  display: flex;
+  justify-content: left;
+  align-items: left;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  font-family: 'PublicPixel';
+  font-weight: 50px;
+  color: #f5f5f5; 
+  text-shadow: 1px 2px 1px #919191,
+        1px 2px 1px #919191,
+    1px 3px 3px rgba(246, 149, 149, 0.4),
+    1px 22px 10px rgba(146, 146, 146, 0.2),
+    1px 25px 35px rgba(16,16,16,0.2),
+    1px 30px 60px rgba(16,16,16,0.4);
+}
+
 .timer {
   display: flex;
   justify-content: center;
