--- a/src/settings.css
+++ b/src/settings.css
@@ -125,27 +125,12 @@ display: block;
 animation: blockyAppear 1.6s forwards;
 }
 
-
+/*Settings modal animation*/
 @keyframes blockyAppear {
 0% {
 width: 0;
 height: 0;
 background-size: 0% 0%;
-}
-25% {
-width: 75px;
-height: 50px;
-background-size: 25% 25%;
-}
-50% {
-width: 150px;
-height: 75px;
-background-size: 50% 50%;
-}
-75% {
-width: 225px;
-height: 112.5px;
-background-size: 75% 75%;
 }
 100% {
 width: 250px;
