--- a/src/settings.css
+++ b/src/settings.css
@@ -1,53 +1,70 @@
 .input-number {
-    position: relative;
-    width: 100px;
-    height: 40px;
-    background-color: transparent;
-    overflow: hidden;
-    border-radius: 20px;
-    margin: 2px;
-  }
-  
-  .input-number span {
-    position: absolute;
-    left: 50%;
-    margin-left: -20px;
-    display: inline-block;
-    background-color: white;
-    height: 100%;
-    width: 40px;
-    border-radius: 20px;
-    text-align: center;
-    line-height: 40px;
-    font-size: 16px;
-    color: #6C6DFF;
-    letter-spacing: -1px;
-  }
-  
-  .input-number-button {
-    display: inline-block;
-    width: 50px;
-    height: 100%;
-    background-color: transparent;
-    border: none;
-    color: white;
-    font-size: 20px;
-    cursor: pointer;
-    background-color: rgba(255,255,255,.2);
-    transition: background-color .2s ease;
-  }
-  
-  .input-number button:nth-of-type(1) {
-    padding-right: 20px
-  }
-  
-  .input-number button:nth-of-type(2) {
-    padding-left: 20px;
-  }
-  
-  .input-number button:hover {
-    background-color: rgba(255,255,255,.25);
-  }
+position: relative;
+width: 100px;
+height: 40px;
+background-color: transparent;
+overflow: hidden;
+border-radius: 20px;
+margin: 2px;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+-webkit-appearance: none;
+margin: 0;
+text-align:right;
+}
+
+input[type="number"] {
+width: 40px;
+height: 25px; 
+padding: 2px;
+font-size: 14px;
+font-family: 'PublicPixel';
+text-align: right;
+}  
+
+
+.input-number span {
+position: absolute;
+left: 50%;
+margin-left: -20px;
+display: inline-block;
+background-color: white;
+height: 100%;
+width: 40px;
+border-radius: 20px;
+text-align: center;
+line-height: 40px;
+font-size: 16px;
+color: #6C6DFF;
+letter-spacing: -1px;
+}
+
+.input-number-button {
+display: inline-block;
+width: 50px;
+height: 100%;
+background-color: transparent;
+border: none;
+color: white;
+font-size: 20px;
+cursor: pointer;
+background-color: rgba(255,255,255,.2);
+transition: background-color .2s ease;
+}
+
+.input-number button:nth-of-type(1) {
+padding-right: 20px
+}
+
+.input-number button:nth-of-type(2) {
+padding-left: 20px;
+}
+
+.input-number button:hover {
+background-color: rgba(255,255,255,.25);
+}
 
 .settingsbutton {
 position: absolute;
@@ -85,6 +102,29 @@ color: #fff;
 cursor: pointer;
 padding: 10px;
 }
+
+@font-face{
+  font-family: 'PublicPixel';
+  src: url('./fonts/PublicPixel.ttf') format('opentype');
+}
+
+.settings-content{
+color: #000000;
+font-family: 'PublicPixel'; 
+font-size: 0.9rem;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+}
+
+.settings-content div {
+  margin-bottom: 7px;
+  text-align: right;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 
 .settings-modal {
 background-color: #fff;
