--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,6 @@
   src: url('./fonts/PublicPixel.ttf') format('opentype');
 }
 
-@keyframes textShine {
-  0% {
-    background-position: 0% 50%;
-  }
-  100% {
-    background-position: 100% 50%;
-  }
-}
-
 .retro-shadow {
   display: flex;
   justify-content: left;
@@ -20,12 +11,9 @@
   text-transform: uppercase;
   font-family: 'PublicPixel';
   font-weight: 50px;
-  color: #f5f5f5; 
-  text-shadow: 1px 2px 1px #919191,
-        1px 2px 1px #919191,
+  color: white; 
+  text-shadow:
     1px 3px 3px rgba(246, 149, 149, 0.4),
-    1px 22px 10px rgba(146, 146, 146, 0.2),
-    1px 25px 35px rgba(16,16,16,0.2),
     1px 30px 60px rgba(16,16,16,0.4);
 }
 
@@ -37,21 +25,6 @@
   text-transform: uppercase;
   font-family: 'PublicPixel';
   font-weight: 700;
-    color: #f5f5f5;
-    text-shadow: 1px 1px 1px #919191,
-        1px 2px 1px #919191,
-        1px 3px 1px #919191,
-        1px 4px 1px #919191,
-        1px 5px 1px #919191,
-        1px 6px 1px #919191,
-        1px 7px 1px #919191,
-        1px 8px 1px #919191,
-        1px 9px 1px #919191,
-        1px 10px 1px #919191,
-    1px 18px 6px rgba(246, 149, 149, 0.4),
-    1px 22px 10px rgba(146, 146, 146, 0.2),
-    1px 25px 35px rgba(16,16,16,0.2),
-    1px 30px 60px rgba(16,16,16,0.4);
+  color: white;
+  text-shadow: 10px 10px pink;
 }
-
-
