Removed three seperate buttons and instead kept just one button w/ switch cases & repositioned. Need to remove animations to make it look better

--- a/src/timerButtons.css
+++ b/src/timerButtons.css
@@ -64,6 +64,8 @@ body {
   bottom: 5%;
   display: flex;
   justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
 .timer-button {
@@ -83,7 +85,6 @@ body {
 
 .timer-button:hover {
   letter-spacing: 0.2rem;
-  padding: 1.1rem 3.1rem;
   background: var(--clr);
   color: #ffffff;
   box-shadow: 0 0 35px var(--clr);
