--- a/src/timerButtons.css
+++ b/src/timerButtons.css
@@ -8,33 +8,12 @@
   color: white;
   font-size: 0.6rem;
   font-family: "PublicPixel";
-  left: 50%; 
-  position: absolute;
+  position: fixed;
   top: 20px;
-  transform: translateX(-50%);
-  white-space: nowrap;
-  animation: typewriter 7s steps(90) forwards;
-  animation-fill-mode: both;
   text-shadow: -1px -1px 0 pink, 
   1px -1px 0 pink,
  -1px  1px 0 pink,
   1px  1px 0 pink;
-}
-
-.quote-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-@keyframes typewriter {
-  from {
-    max-width: 0; 
-  }
-  to {
-    max-width: 2000px;
-  }
 }
 
 body {
